# Xqqyt_SignalServer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
MainServer/: MessageParser.cpp  MessageParser.h  Server.cpp  Server.h  main.cpp
MainServer/Strategy/: Strategy.cpp  Strategy.h
client_test/: CMakeLists.txt  main.cpp
